Changelog
=========

1.0-dev (unreleased)
--------------------

- Improved IUserTokenInputWidget and UserSearch view
  [gborelli]

- Package created using templer
  [gborelli]