@@ -1,0 +1,4 @@
+recursive-include src *
+recursive-include docs *
+include *
+global-exclude *.pyc
